fix text align

--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,7 @@ strong {
 
 .apresentacao__conteudo__texto {
     font-size: 1.5rem;
-    text-align: justify;
+    text-align: left;
     font-family: var(--fonte-secundaria);
 
 }
